# housing-ayahelaggadi

./: .gitconfig  README.md  docker-compose.yml
housing-api/: Dockerfile  alembic.ini  database.py  main.py  models.py  pyproject.toml
housing-api/migrations/versions/: bc3183bce420_create_houses_table.py
housing-model/: Dockerfile  mlflow.db  pyproject.toml  train.py
housing-model/mlruns/0/: meta.yaml
housing-model/mlruns/0/037331c4682c4166bb804b1dbdf1c69c/: meta.yaml
housing-model/mlruns/0/037331c4682c4166bb804b1dbdf1c69c/tags/: mlflow.runName
housing-model/mlruns/0/0692fca1069e4432af52d8881a377c7c/: meta.yaml
housing-model/mlruns/0/0692fca1069e4432af52d8881a377c7c/metrics/: r2_score
housing-model/mlruns/0/0692fca1069e4432af52d8881a377c7c/tags/: mlflow.runName
housing-model/mlruns/0/1f34ff1a391e4574beed4cc9e3147133/: meta.yaml
housing-model/mlruns/0/1f34ff1a391e4574beed4cc9e3147133/metrics/: r2_score
housing-model/mlruns/0/1f34ff1a391e4574beed4cc9e3147133/params/: model_type
housing-model/mlruns/0/1f34ff1a391e4574beed4cc9e3147133/tags/: mlflow.runName  (+1 more)
housing-model/mlruns/0/248ff62ae9bb4e449b9df7b50f31dec0/: meta.yaml
housing-model/mlruns/0/3ad11a36b5a6473dad06168ebf9b282c/: meta.yaml
housing-model/mlruns/0/3e37bdb3440f45aca96638231b3e5860/: meta.yaml
housing-model/mlruns/0/4279e5c61e2148f4b0d56fca5883b6e8/: meta.yaml
housing-model/mlruns/0/9c623c1557304424aad47a01bf93eb11/: meta.yaml
housing-model/mlruns/0/b87ad4eca4a441c7bc144a97635781aa/: meta.yaml
housing-model/mlruns/0/fe7e74f5fb3e41cd818dd5ee040dd6cb/: meta.yaml
(+21 files in other folders)
