[tool.poetry]
name = "housing-api"
version = "0.1.0"
description = ""
authors = ["Ayah El Aggadi elaggadi12.com"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.1"
SQLAlchemy = "^2.0.38"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
