[tool.poetry]
name = "housing-model"
version = "0.1.0"
description = ""
authors = ["Ayah El Aggadi elaggadi12@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
numpy = "^2.2.3"
mlflow = "^2.20.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
